# annotation

./: Annotate.pro  AnnotateArea.cpp  AnnotateArea.h  AnnotationsBrowser.cpp  AnnotationsBrowser.h  AnnotationsSet.cpp  AnnotationsSet.h  CMakeLists.txt  DialogClassSelection.cpp  DialogClassSelection.h  MainWindow.cpp  MainWindow.h  NetworkHandler.cpp  NetworkHandler.h  OptFlowTracking.cpp  OptFlowTracking.h  ParamsHandler.h  ParamsQEditorLine.cpp  ParamsQEditorLine.h  ParamsQEditorWindow.cpp  ParamsQEditorWindow.h  QtCvUtils.h  README  SuperPixelsAnnotate.cpp  SuperPixelsAnnotate.h  config.yaml  configBBOnly.yaml  configFFPoints.yaml  main.cpp  mainwindow.cpp  scribble.pro
